--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
+    "emoji-picker-react": "^4.13.2",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.0",
+    "recharts": "^3.1.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
